# nil

./: .gitattributes  .gitignore  .pnpmfile.cjs  .prettierrc.json  .taurignore  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  diesel.toml  dprint.json  eslint.config.js  eslint.config.ts  justfile  miho.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  rustfmt.toml  tsconfig.json
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: main.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: error.rs  event.rs  lib.rs  log.rs  main.rs  manager.rs  settings.rs  state.rs  tray.rs
app/src-tauri/src/command/: battle.rs  chat.rs  city.rs  client.rs  continent.rs  lua.rs  military.rs  mod.rs  player.rs  ranking.rs  report.rs  round.rs  script.rs  scripts.rs  server.rs  user.rs  world.rs
app/src-tauri/src/plugin/: desktop.rs  mod.rs
app/src-tauri/src/window/: desktop.rs  mod.rs
crates/nil/: Cargo.toml  package.json  tailwind.config.js  tauri.conf.json  vite.config.js
crates/nil-client/: Cargo.toml
crates/nil-client/src/: authorization.rs  circuit_breaker.rs  client.rs  error.rs  http.rs  lib.rs  nsr.rs  request.rs  retry.rs  server.rs  websocket.rs
crates/nil-client/src/client/: auth.rs  battle.rs  chat.rs  cheat.rs  city.rs  continent.rs  http.rs  infrastructure.rs  military.rs  mod.rs  player.rs  ranking.rs  report.rs  round.rs  script.rs  user.rs  village.rs  websocket.rs  world.rs
crates/nil-client/src/http/: auth.rs  authorization.rs  circuit_breaker.rs  mod.rs  retry.rs
crates/nil-continent/: Cargo.toml  README.md
crates/nil-continent/src/: lib.rs
crates/nil-core/: Cargo.toml
crates/nil-core-macros/: Cargo.toml
crates/nil-core-macros/src/: building.rs  lib.rs  mine.rs  npc.rs  owner.rs  precursor.rs  report.rs  ruler.rs  storage.rs  unit.rs
crates/nil-core-macros/src/building/: mine.rs  storage.rs
crates/nil-core-macros/src/infrastructure/: building.rs  mine.rs  mod.rs
crates/nil-core-macros/src/npc/: precursor.rs
crates/nil-core/src/: battle.rs  chat.rs  continent.rs  error.rs  ethic.rs  event.rs  infrastructure.rs  lib.rs  npc.rs  player.rs  resource.rs  resources.rs  round.rs  ruler.rs  savedata.rs  script.rs  tests.rs  turn.rs  unit.rs  village.rs  world.rs
crates/nil-core/src/battle/: luck.rs  mod.rs  tests.rs
crates/nil-core/src/behavior/: build.rs  mod.rs  plunder.rs  recruit.rs  score.rs
crates/nil-core/src/building/: academy.rs  farm.rs  iron_mine.rs  mod.rs  prefecture.rs  quarry.rs  sawmill.rs  silo.rs  stable.rs  wall.rs  warehouse.rs
crates/nil-core/src/city/: mod.rs  owner.rs  stability.rs
crates/nil-core/src/continent/: coord.rs  distance.rs  field.rs  index.rs  mod.rs  size.rs  tests.rs
crates/nil-core/src/diplomacy/: mod.rs  opinion.rs
crates/nil-core/src/infrastructure/: building.rs  catalog.rs  mine.rs  mod.rs  prelude.rs  queue.rs  requirements.rs  stats.rs  storage.rs
crates/nil-core/src/military/: army.rs  maneuver.rs  mod.rs  squad.rs  tests.rs
crates/nil-core/src/npc/: bot.rs  hollow.rs  precursor.rs
crates/nil-core/src/player/: manager.rs
crates/nil-core/src/ranking/: mod.rs  prelude.rs  score.rs
crates/nil-core/src/report/: battle.rs  mod.rs  support.rs
crates/nil-core/src/resource/: cost.rs  diff.rs  maintenance.rs  prelude.rs  workforce.rs
crates/nil-core/src/resources/: cost.rs  diff.rs  influence.rs  maintenance.rs  mod.rs  prelude.rs  workforce.rs
crates/nil-core/src/round/: mod.rs  tests.rs
crates/nil-core/src/unit/: archer.rs  axeman.rs  heavy_cavalry.rs  light_cavalry.rs  mod.rs  pikeman.rs  squad.rs  swordsman.rs
crates/nil-core/src/village/: coord.rs  mod.rs  owner.rs  (+1 more)
crates/nil-core/tests/: battle.rs  world.rs
crates/nil-crypto/: Cargo.toml
crates/nil-crypto/src/: error.rs  lib.rs  password.rs
crates/nil-database/: Cargo.toml
crates/nil-database/src/: error.rs  lib.rs  schema.rs
crates/nil-future/: Cargo.toml
crates/nil-future/src/: lib.rs  task.rs
crates/nil-log/: Cargo.toml
crates/nil-log/src/: lib.rs  timer.rs
crates/nil-lua/: Cargo.toml
crates/nil-lua-cli/: Cargo.toml
crates/nil-lua-cli/src/: config.rs  main.rs
crates/nil-lua/examples/: get-remote-worlds.lua
crates/nil-lua/src/: error.rs  io.rs  lib.rs  main.rs  script.rs  stdio.rs
crates/nil-lua/types/: city.d.lua  continent.d.lua  ethic.d.lua  global.d.lua  ranking.d.lua  resources.d.lua  server.d.lua  world.d.lua
crates/nil-macros/: Cargo.toml
crates/nil-macros/src/: lib.rs
crates/nil-namegen/: Cargo.toml
crates/nil-namegen/data/: female.csv  male.csv  surname.csv
crates/nil-namegen/scripts/: sort.mts
crates/nil-namegen/src/: adjective.rs  gender.rs  lib.rs  name.rs
crates/nil-num/: Cargo.toml
crates/nil-num-macros/: Cargo.toml
crates/nil-num-macros/src/: big_int.rs  lib.rs  ops.rs
crates/nil-num/src/: growth.rs  lib.rs  mul_ceil.rs  ops.rs  roman.rs  triangle.rs
crates/nil-payload/: Cargo.toml
crates/nil-payload/src/: battle.rs  chat.rs  city.rs  continent.rs  lib.rs  military.rs  player.rs  query.rs  ranking.rs  report.rs  round.rs  user.rs  world.rs
crates/nil-repl/: Cargo.toml
crates/nil-repl/src/: main.rs
crates/nil-script/: Cargo.toml  grammar.ebnf
crates/nil-script/src/: chunk.rs  debug.rs  error.rs  lib.rs  main.rs  op_code.rs  util.rs  value.rs
crates/nil-server/: Cargo.toml
crates/nil-server-database/: Cargo.toml
crates/nil-server-database/src/: error.rs  lib.rs  migration.rs  schema.rs
crates/nil-server-types/: Cargo.toml
crates/nil-server-types/src/: auth.rs  lib.rs  round.rs  time.rs  world.rs
crates/nil-server/src/: app.rs  env.rs  error.rs  lib.rs  main.rs  response.rs  router.rs  state.rs  websocket.rs
crates/nil-util/: Cargo.toml
crates/nil-util/src/: error.rs  iter.rs  lib.rs  ops.rs  option.rs  password.rs  process.rs  result.rs  serde.rs  string.rs  task.rs  vec.rs
crates/nil/capabilities/: desktop.json  main.json
crates/nil/src/: App.vue  command.rs  index.ts  lib.rs  main.rs  plugin.rs  state.rs  tray.rs  window.rs
crates/nil/src-tauri/: Cargo.toml
(+2166 files in other folders)
