[workspace]
resolver = "3"
members = ["app/src-tauri", "crates/*"]

[workspace.package]
version = "0.1.9"
edition = "2024"
rust-version = "1.93"
license-file = "./LICENSE"
homepage = "https://nil.dev.br"
repository = "https://github.com/tsukilabs/nil"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>", "Danilo Soares <danilofs18@gmail.com>"]

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"

[profile.release-bin]
inherits = "release"
strip = "symbols"

[profile.preview]
inherits = "release"
incremental = true
codegen-units = 16
lto = "off"
opt-level = 0
debug = true
debug-assertions = true

[workspace.dependencies]
nil-client.path = "./crates/nil-client"
nil-core.path = "./crates/nil-core"
nil-core-macros.path = "./crates/nil-core-macros"
nil-namegen.path = "./crates/nil-namegen"
nil-num.path = "./crates/nil-num"
nil-num-macros.path = "./crates/nil-num-macros"
nil-server.path = "./crates/nil-server"
nil-payload.path = "./crates/nil-payload"
nil-util.path = "./crates/nil-util"

anyhow = "1.0"
bon = "3.8"
bytes = "1.11"
futures = "0.3"
http = "1.3"
itertools = "0.14"
js-sys = "0.3"
local-ip-address = "=0.6.5"
num-traits = "0.2"
percent-encoding = "2.3"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.12"
remain = "0.2"
serde_json = "1.0"
subenum = "1.1"
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-dialog = "2.4"
tauri-plugin-fs = "2.4"
tauri-plugin-opener = "2.5"
tauri-plugin-os = "2.3"
tauri-plugin-persisted-scope = "2.3"
tauri-plugin-process = "2.3"
tauri-plugin-single-instance = "2.3"
tauri-plugin-updater = "2.9"
thiserror = "2.0"
wasm-bindgen = "0.2"

[workspace.dependencies.axum]
version = "0.8"
features = ["macros", "ws"]

[workspace.dependencies.derive_more]
version = "2.1"
features = ["deref", "deref_mut", "display", "from", "into"]

[workspace.dependencies.flate2]
version = "1.1"
default-features = false
features = ["zlib-rs"]

[workspace.dependencies.glam]
version = "0.30"
features = ["fast-math"]

[workspace.dependencies.jiff]
version = "0.2"
features = ["serde"]

[workspace.dependencies.rand]
version = "0.9"
features = ["nightly"]

[workspace.dependencies.reqwest]
version = "0.12"
default-features = false
features = ["charset", "json", "rustls-tls"]

[workspace.dependencies.semver]
version = "1.0"
features = ["serde"]

[workspace.dependencies.serde]
version = "1.0"
features = ["derive", "rc"]

[workspace.dependencies.strum]
version = "0.27"
features = ["derive"]

[workspace.dependencies.syn]
version = "2.0"
features = ["derive"]

[workspace.dependencies.tauri]
version = "2.9"
features = ["rustls-tls"]

[workspace.dependencies.tauri-plugin-pinia]
git = "https://github.com/ferreira-tb/tauri-store"
branch = "main"

[workspace.dependencies.tauri-plugin-prevent-default]
git = "https://github.com/ferreira-tb/tauri-plugin-prevent-default"
branch = "main"
features = ["platform-windows"]

[workspace.dependencies.tokio]
version = "1.48"
features = ["full"]

[workspace.dependencies.tokio-tungstenite]
version = "0.27"
features = ["url"]

[workspace.dependencies.tower-http]
version = "0.6"
features = ["trace"]

[workspace.dependencies.tracing]
version = "0.1"
features = ["release_max_level_off"]

[workspace.dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["ansi", "chrono", "env-filter", "fmt", "parking_lot", "registry", "smallvec", "std"]

[workspace.dependencies.url]
version = "2.5"
features = ["serde"]

[workspace.dependencies.uuid]
version = "1.19"
features = ["serde", "v4", "v7"]

[workspace.dependencies.web-sys]
version = "0.3"
features = ["console"]

[workspace.lints.rust]
async_fn_in_trait = "allow"
dangling_pointers_from_temporaries = "deny"
unfulfilled_lint_expectations = "deny"
unsafe_op_in_unsafe_fn = "deny"
variant_size_differences = "warn"

[workspace.lints.clippy]
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
enum_glob_use = "allow"
filetype_is_file = "deny"
get_unwrap = "deny"
large_enum_variant = "deny"
map_unwrap_or = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_borrow = "deny"
needless_for_each = "allow"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
similar_names = "allow"
struct_field_names = "allow"
unnecessary_safety_comment = "deny"
unsafe_derive_deserialize = "allow"
useless_conversion = "deny"

[workspace.lints.clippy.pedantic]
level = "deny"
priority = -1
