[package]
name = "nil-client"
version = "0.1.1"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.license-file]
workspace = true

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.authors]
workspace = true

[lints]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.bon]
workspace = true

[dependencies.bytes]
workspace = true

[dependencies.derive_more]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.http]
workspace = true

[dependencies.local-ip-address]
workspace = true

[dependencies.markdown]
workspace = true

[dependencies.nil-core]
workspace = true

[dependencies.percent-encoding]
workspace = true

[dependencies.reqwest]
workspace = true

[dependencies.semver]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.tokio-tungstenite]
workspace = true

[dependencies.url]
workspace = true
