[package]
name = "nil-client"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bon.workspace = true
bytes.workspace = true
derive_more.workspace = true
futures.workspace = true
http.workspace = true
nil-core.workspace = true
nil-payload.workspace = true
percent-encoding.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true

[target.'cfg(not(target_os = "android"))'.dependencies]
local-ip-address.workspace = true
