[package]
name = "nil-client"
publish = true
readme = "../../../README.md"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.docs.rs]
no-default-features = true
features = ["lua"]
default-target = "x86_64-unknown-linux-gnu"
targets = []

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bon.workspace = true
bytes.workspace = true
derive_more.workspace = true
either.workspace = true
futures.workspace = true
headers.workspace = true
http.workspace = true
local-ip-address.workspace = true
nil-core.workspace = true
nil-crypto.workspace = true
nil-payload.workspace = true
nil-server-types.workspace = true
nil-util.workspace = true
reqwest.workspace = true
serde.workspace = true
strum.workspace = true
tap.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true

[dependencies.mlua]
version = "0.11"
default-features = false
optional = true

[features]
lua = ["dep:mlua", "nil-core/lua"]
