[package]
name = "nil-continent"
version = "0.1.1"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.authors]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies.js-sys]
workspace = true

[dependencies.wasm-bindgen]
workspace = true

[dependencies.web-sys]
workspace = true
