[package]
name = "nil-continent"
license = "AGPL-3.0-only"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
wasm-bindgen.workspace = true
