[package]
name = "nil-core-macros"
version = "0.1.0"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.strum]
version = "0.27"
features = ["derive"]

[dependencies.syn]
version = "2.0"
features = ["derive"]
