[package]
name = "nil-core-macros"
version = "0.1.1"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.license-file]
workspace = true

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.authors]
workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies.proc-macro2]
workspace = true

[dependencies.quote]
workspace = true

[dependencies.syn]
workspace = true
