[package]
name = "nil-core"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
bon.workspace = true
bytes.workspace = true
derive_more.workspace = true
glam.workspace = true
itertools.workspace = true
jiff.workspace = true
nil-core-macros.workspace = true
nil-namegen.workspace = true
nil-num.workspace = true
nil-util.workspace = true
num-traits.workspace = true
rand.workspace = true
remain.workspace = true
serde.workspace = true
strum.workspace = true
subenum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
anyhow.workspace = true
