[package]
name = "nil-core"
publish = false
readme = "../../../README.md"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.docs.rs]
no-default-features = true
features = ["lua"]
default-target = "x86_64-unknown-linux-gnu"
targets = []

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bon.workspace = true
bytes.workspace = true
derive_more.workspace = true
flate2.workspace = true
glam.workspace = true
itertools.workspace = true
jiff.workspace = true
nil-core-macros.workspace = true
nil-namegen.workspace = true
nil-num.workspace = true
nil-util.workspace = true
num-traits.workspace = true
paste.workspace = true
rand.workspace = true
remain.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
subenum.workspace = true
tap.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dependencies.mlua]
version = "0.11"
default-features = false
optional = true

[features]
lua = ["dep:mlua"]
