[package]
name = "nil-crypto"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
derive_more.workspace = true
serde.workspace = true
tap.workspace = true
tracing.workspace = true
