[package]
name = "nil-future"
version = "0.1.0"
publish = false

edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
tokio.workspace = true

[dependencies.tauri]
version = "2.6"
default-features = false
