[package]
name = "nil-lua-cli"
publish = false
readme = "../../../README.md"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.docs.rs]
no-default-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
mlua.workspace = true
nil-crypto.workspace = true
nil-lua.workspace = true
nil-server-types.workspace = true
serde.workspace = true
tap.workspace = true
tokio.workspace = true
toml.workspace = true

[dependencies.nil-client]
workspace = true
features = ["lua"]

[dependencies.nil-core]
workspace = true
features = ["lua"]

[[bin]]
name = "nls"
path = "src/main.rs"
