[package]
name = "nil-lua"
publish = true
readme = "../../README.md"

description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.docs.rs]
no-default-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
jiff.workspace = true
mlua.workspace = true
nil-payload.workspace = true
serde.workspace = true
tap.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dependencies.nil-client]
workspace = true
features = ["lua"]
