[package]
name = "nil-macros"
publish = false

[package.version]
workspace = true

[package.description]
workspace = true

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.strum]
version = "0.26"
features = ["derive"]

[dependencies.syn]
version = "2.0"
features = ["derive"]
