[package]
name = "nil-namegen"
version = "0.1.0"
publish = false

edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
bon.workspace = true
derive_more.workspace = true
rand.workspace = true
serde.workspace = true
strum.workspace = true
