[package]
name = "nil-namegen"
version = "0.1.1"
publish = false

edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
itertools.workspace = true
rand.workspace = true
strum.workspace = true
