[package]
name = "nil-num"
version = "0.1.1"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.license-file]
workspace = true

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.authors]
workspace = true

[lints]
workspace = true

[dependencies.bon]
workspace = true

[dependencies.derive_more]
workspace = true

[dependencies.nil-num-macros]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.strum]
workspace = true
