[package]
name = "nil-num"
version = "0.1.1"
publish = false

edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
bon.workspace = true
derive_more.workspace = true
nil-num-macros.workspace = true
serde.workspace = true
strum.workspace = true
