[package]
name = "nil-num"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
bon.workspace = true
nil-num-macros.workspace = true
serde.workspace = true
strum.workspace = true
