[package]
name = "nil-payload"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
nil-core.workspace = true
serde.workspace = true
