[package]
name = "nil-payload"
publish = true
readme = "../../README.md"

description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
no-default-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []

[lints]
workspace = true

[dependencies]
bon.workspace = true
derive_more.workspace = true
nil-core.workspace = true
nil-crypto.workspace = true
nil-payload-macros.workspace = true
nil-server-types.workspace = true
semver.workspace = true
serde.workspace = true

[dependencies.axum]
workspace = true
optional = true

[dependencies.ts-rs]
workspace = true
optional = true

[features]
default = []
axum = ["dep:axum"]
typescript = [
  "dep:ts-rs",
  "nil-core/typescript",
  "nil-crypto/typescript",
  "nil-server-types/typescript",
]
