[package]
name = "nil-repl"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
nil-script.workspace = true

[features]
trace = ["nil-script/trace"]

[[bin]]
name = "ns"
path = "src/main.rs"
