[package]
name = "nil-server-database"
publish = true
readme = "../../README.md"

description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
no-default-features = true
features = []
default-target = "x86_64-unknown-linux-gnu"
targets = []

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bon.workspace = true
derive_more.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
either.workspace = true
itertools.workspace = true
jiff.workspace = true
libsqlite3-sys.workspace = true
nil-core.workspace = true
nil-crypto.workspace = true
nil-server-types.workspace = true
nil-util.workspace = true
semver.workspace = true
serde.workspace = true
tap.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
