[package]
name = "nil-server-types"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
derive_more.workspace = true
nil-core.workspace = true
serde.workspace = true
strum.workspace = true
